prep data for generating text with an RNN

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -252,3 +252,40 @@ model.summary()
 ## generating text with an RNN
 
 https://www.tensorflow.org/text/tutorials/text_generation
+
+Instead of generating a word from thin air, predict the next word, based on a corpus of example sentences to have a sense of the next expected word in a sentence.
+
+### prep data for generating text with an RNN
+
+```py
+data = 'corpus as a single string for now\nwow this is a simple example\n...'
+corpus = data.lower().split('\n')
+
+tokenizer = Tokenizer()
+tokenizer.fit_on_texts(corpus) # kvp: key = word, value = token for that word
+total_words = len(tokenizer.word_index) + 1 # +1 for OOV words
+
+# input_sequences will be a 2D array: a list of sequences of tokens
+input_sequences = [] # will pad and then split into x's and y's (labels / next words)
+# use corpus sentences to add to input_sequences:
+for line in corpus:
+  token_list = tokenizer.texts_to_sequence([line])[0] # e.g. 'A quick ...' --> [4 2 ...]
+  for i in range(1, len(token_list)):
+    # use i to generate n-grams, all starting from the start of the sentence:
+    n_gram_sequence = token_list[:i+1]
+    input_sequences.append(n_gram_sequence)
+
+# get length of longest sentence in corpus to then pad all sentences for uniform length:
+max_sequence_len = max([len(x) for x in input_sequences])
+input_sequences =
+  np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))
+  # (use PRE-padding so it's easier to get the label = it's the last token!)
+  # [0 0  4  2]: input is 0 0 4,  output label is  2
+  # [0 4  2 66]: input is 0 4 2,  output label is 66
+  # [4 2 66  8]: input is 4 2 66, output label is  8
+
+xs = input_sequences[:, :-1]     # e.g. [4 2 66]
+labels = input_sequences[:, -1] # e.g. 8
+ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
+# to_categorical = one-hot encoding of those labels
+```
