clarify to_categorical

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -284,8 +284,8 @@ input_sequences =
   # [0 4  2 66]: input is 0 4 2,  output label is 66
   # [4 2 66  8]: input is 4 2 66, output label is  8
 
-xs = input_sequences[:, :-1]     # e.g. [4 2 66]
+xs = input_sequences[:, :-1]    # e.g. [4 2 66]
 labels = input_sequences[:, -1] # e.g. 8
 ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
-# to_categorical = one-hot encoding of those labels
+# to_categorical converts labels to one-hot-encodings with 1 corpus word slot filled
 ```
