neural network for generating text with an RNN

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -275,7 +275,7 @@ for line in corpus:
     n_gram_sequence = token_list[:i+1]
     input_sequences.append(n_gram_sequence)
 
-# get length of longest sentence in corpus to then pad all sentences for uniform length:
+# get length of longest sentence in corpus to then pad all sentences for uniform input length:
 max_sequence_len = max([len(x) for x in input_sequences])
 input_sequences =
   np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))
@@ -288,4 +288,46 @@ xs = input_sequences[:, :-1]    # e.g. [4 2 66]
 labels = input_sequences[:, -1] # e.g. 8
 ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
 # to_categorical converts labels to one-hot-encodings with 1 corpus word slot filled
+```
+
+### neural network for generating text with an RNN
+
+```py
+embedding_dimensions = 64
+
+model = Sequential()
+model.add(Embedding(
+  total_words,
+  embedding_dimensions,
+  input_length=max_sequence_len - 1 # -1 because final word = label
+))
+model.add(Bidirectional(LSTM(20))) # Bidirectional helps carry context backwards too
+model.add(Dense(total_words, activation='softmax'))
+model.compile(
+  loss='categorical_crossentropy',
+  optimizer='adam',
+  metrics=['accuracy']
+)
+model.fit(xs, ys, epochs=500, verbose=1) # many epochs because very little data
+```
+
+```py
+seed_text = 'Laurence went to dublin'
+next_few_words = 10
+
+def continued_sentence(seed_text, next_few_words):
+  for _ in range(next_few_words):
+    # convert seed text to token list:
+    token_list = tokenizer.texts_to_sequences([seed_text])[0]
+    # pad token list to match uniform input length of token_list like earlier:
+    token_list = pad_sequences([token_list], maxlen=max_sequence_len - 1, padding='pre')
+    # predict the next 10 words:
+    predicted_next_token = model.predict_classes(token_list, verbose=0)
+    # predicted_next_token = model.predict(token_list)
+    # predicted_next_token = np.argmax(probabilities, axis= -1)[0]
+    predicted_next_word = tokenizer.index_word[predicted_next_token]
+    seed_text += ' ' + predicted_next_word
+  return seed_text
+
+print(continued_sentence(seed_text, next_few_words))
 ```
