--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -255,6 +255,15 @@ https://www.tensorflow.org/text/tutorials/text_generation
 
 Instead of generating a word from thin air, predict the next word, based on a corpus of example sentences to have a sense of the next expected word in a sentence.
 
+```py
+import tensorflow as tf
+import numpy as np
+from tf.keras.layers import Embedding, LSTM, Dense, Bidirectional
+from tf.keras.models import Sequential
+from tf.keras.preprocessing.text import Tokenizer
+from tf.keras.preprocessing.sequence import pad_sequences
+```
+
 ### prep data for generating text with an RNN
 
 ```py
