tweaking notes, comments, and code for generating/predicting the next few words

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -253,7 +253,7 @@ model.summary()
 
 https://www.tensorflow.org/text/tutorials/text_generation
 
-Instead of generating a word from thin air, predict the next word, based on a corpus of example sentences to have a sense of the next expected word in a sentence.
+Instead of generating a word from thin air, predict the next word, based on a corpus of example sentences to have a sense of the next expected word in a sentence. Kinda like a weather forecast, with decreasing confidence in the words further along the sentence into the "future".
 
 ```py
 import tensorflow as tf
@@ -287,14 +287,19 @@ for line in corpus:
 # get length of longest sentence in corpus to then pad all sentences for uniform input length:
 max_sequence_len = max([len(x) for x in input_sequences])
 input_sequences =
-  np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))
+  np.array(pad_sequences(
+    input_sequences,
+    maxlen=max_sequence_len,
+    padding='pre'
+  ))
   # (use PRE-padding so it's easier to get the label = it's the last token!)
   # [0 0  4  2]: input is 0 0 4,  output label is  2
   # [0 4  2 66]: input is 0 4 2,  output label is 66
   # [4 2 66  8]: input is 4 2 66, output label is  8
 
-xs = input_sequences[:, :-1]    # e.g. [4 2 66]
-labels = input_sequences[:, -1] # e.g. 8
+xs, labels = input_sequences[:, :-1], input_sequences[:, -1]
+# e.g. [4 2 66  8] --> x = [4 2 66], label = 8
+
 ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
 # to_categorical converts labels to one-hot-encodings with 1 corpus word slot filled
 ```
@@ -304,20 +309,23 @@ ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
 ```py
 embedding_dimensions = 64
 
-model = Sequential()
-model.add(Embedding(
-  total_words,
-  embedding_dimensions,
-  input_length=max_sequence_len - 1 # -1 because final word = label
-))
-model.add(Bidirectional(LSTM(20))) # Bidirectional helps carry context backwards too
-model.add(Dense(total_words, activation='softmax'))
+model = Sequential([
+    Embedding(
+      total_words,
+      embedding_dimensions,
+      input_length=max_sequence_len - 1 # -1 because final word = label
+    ),
+    Bidirectional(LSTM(20)), # Bidirectional = carry context backwards too
+    Dense(total_words, activation='softmax')
+])
 model.compile(
   loss='categorical_crossentropy',
   optimizer='adam',
   metrics=['accuracy']
 )
-model.fit(xs, ys, epochs=500, verbose=1) # many epochs because very little data
+mode.summary()
+model.fit(xs, ys, epochs=500)
+# use many epochs when it takes longer to converge because very little data
 ```
 
 ```py
@@ -329,11 +337,17 @@ def continued_sentence(seed_text, next_few_words):
     # convert seed text to token list:
     token_list = tokenizer.texts_to_sequences([seed_text])[0]
     # pad token list to match uniform input length of token_list like earlier:
-    token_list = pad_sequences([token_list], maxlen=max_sequence_len - 1, padding='pre')
-    # predict the next 10 words:
+    token_list = pad_sequences(
+      [token_list],
+      maxlen=max_sequence_len - 1,
+      padding='pre'
+    )
+    # probabilities = model.predict(token_list)
+    # predicted_next_token = np.argmax(probabilities, axis=-1)[0]
+    # if predicted != 0:
+    #   predicted_next_word = tokenizer.index_word[predicted_next_token]
+    # seed_text += ' ' + predicted_next_word
     predicted_next_token = model.predict_classes(token_list, verbose=0)
-    # predicted_next_token = model.predict(token_list)
-    # predicted_next_token = np.argmax(probabilities, axis= -1)[0]
     predicted_next_word = tokenizer.index_word[predicted_next_token]
     seed_text += ' ' + predicted_next_word
   return seed_text
