update code for slightly larger data set

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -267,7 +267,8 @@ from tf.keras.preprocessing.sequence import pad_sequences
 ### prep data for generating text with an RNN
 
 ```py
-data = 'corpus as a single string for now\nwow this is a simple example\n...'
+# data = 'corpus as a single string for now\nwow this is a simple example\n...'
+data = open('./data.txt').read()
 corpus = data.lower().split('\n')
 
 tokenizer = Tokenizer()
@@ -307,7 +308,8 @@ ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
 ### neural network for generating text with an RNN
 
 ```py
-embedding_dimensions = 64
+embedding_dimensions = 100
+adam = Adam(lr=0.01) # lr = learning rate
 
 model = Sequential([
     Embedding(
@@ -315,17 +317,17 @@ model = Sequential([
       embedding_dimensions,
       input_length=max_sequence_len - 1 # -1 because final word = label
     ),
-    Bidirectional(LSTM(20)), # Bidirectional = carry context backwards too
+    Bidirectional(LSTM(150)), # Bidirectional = carry context backwards too
     Dense(total_words, activation='softmax')
 ])
 model.compile(
   loss='categorical_crossentropy',
-  optimizer='adam',
+  optimizer=adam,
   metrics=['accuracy']
 )
 mode.summary()
-model.fit(xs, ys, epochs=500)
-# use many epochs when it takes longer to converge because very little data
+model.fit(xs, ys, epochs=100)
+# use 500 epochs when it takes longer to converge because very little data
 ```
 
 ```py
