tweak code and link to colab

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -279,7 +279,7 @@ total_words = len(tokenizer.word_index) + 1 # +1 for OOV words
 input_sequences = [] # will pad and then split into x's and y's (labels / next words)
 # use corpus sentences to add to input_sequences:
 for line in corpus:
-  token_list = tokenizer.texts_to_sequence([line])[0] # e.g. 'A quick ...' --> [4 2 ...]
+  token_list = tokenizer.texts_to_sequences([line])[0] # e.g. 'A quick ...' --> [4 2 ...]
   for i in range(1, len(token_list)):
     # use i to generate n-grams, all starting from the start of the sentence:
     n_gram_sequence = token_list[:i+1]
@@ -287,16 +287,15 @@ for line in corpus:
 
 # get length of longest sentence in corpus to then pad all sentences for uniform input length:
 max_sequence_len = max([len(x) for x in input_sequences])
-input_sequences =
-  np.array(pad_sequences(
-    input_sequences,
-    maxlen=max_sequence_len,
-    padding='pre'
-  ))
-  # (use PRE-padding so it's easier to get the label = it's the last token!)
-  # [0 0  4  2]: input is 0 0 4,  output label is  2
-  # [0 4  2 66]: input is 0 4 2,  output label is 66
-  # [4 2 66  8]: input is 4 2 66, output label is  8
+input_sequences = np.array(pad_sequences(
+  input_sequences,
+  maxlen=max_sequence_len,
+  padding='pre'
+))
+# (use PRE-padding so it's easier to get the label = it's the last token!)
+# [0 0  4  2]: input is 0 0 4,  output label is  2
+# [0 4  2 66]: input is 0 4 2,  output label is 66
+# [4 2 66  8]: input is 4 2 66, output label is  8
 
 xs, labels = input_sequences[:, :-1], input_sequences[:, -1]
 # e.g. [4 2 66  8] --> x = [4 2 66], label = 8
@@ -308,8 +307,10 @@ ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)
 ### neural network for generating text with an RNN
 
 ```py
+# from tensorflow.keras.optimizers import Adam
+
 embedding_dimensions = 100
-adam = Adam(lr=0.01) # lr = learning rate
+adam = Adam(learning_rate=0.005) # is 0.01 too high? lower a little to avoid "bouncing"
 
 model = Sequential([
     Embedding(
@@ -317,7 +318,7 @@ model = Sequential([
       embedding_dimensions,
       input_length=max_sequence_len - 1 # -1 because final word = label
     ),
-    Bidirectional(LSTM(150)), # Bidirectional = carry context backwards too
+    Bidirectional(LSTM(200)), # Bidirectional = carry context backwards too
     Dense(total_words, activation='softmax')
 ])
 model.compile(
@@ -326,7 +327,7 @@ model.compile(
   metrics=['accuracy']
 )
 mode.summary()
-model.fit(xs, ys, epochs=100)
+model.fit(xs, ys, epochs=50)
 # use 500 epochs when it takes longer to converge because very little data
 ```
 
@@ -356,3 +357,5 @@ def continued_sentence(seed_text, next_few_words):
 
 print(continued_sentence(seed_text, next_few_words))
 ```
+
+- my colab assignment solution: https://colab.research.google.com/drive/1H5Z0-cbwxQC7ApMtsH9oznJWnqsf0nsM
