--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -1,6 +1,6 @@
 # some title
 
-- course: ???
+- course: https://www.coursera.org/learn/tensorflow-sequences-time-series-and-prediction
 
 - slides: ???
 
