slides and forum links

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -2,11 +2,11 @@
 
 - course: https://www.coursera.org/learn/tensorflow-sequences-time-series-and-prediction
 
-- slides: ???
+- slides: https://community.deeplearning.ai/t/tf1-course-4-lecture-notes/121711
 
 - companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C4
 
-- discussion forum: ???
+- discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-4/82
 
 - univariate time series = ???
 - multivariate time series = ???
