--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -1,4 +1,4 @@
-# some title
+# Sequences, Time Series, and Prediction in TensorFlow
 
 - course: https://www.coursera.org/learn/tensorflow-sequences-time-series-and-prediction
 
