univariate vs multivariate time series

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -8,8 +8,8 @@
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-4/82
 
-- univariate time series = ???
-- multivariate time series = ???
+- univariate time series = one variable over time
+- multivariate time series = multiple variables over time, but together are more helpful
 
 - MAE = Mean Absolute Error = ??? to evaluate accuracy of sequence models - how???
 
