trend, seasonality, auto-correlation, noise, non-stationary behaviour

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -11,6 +11,14 @@
 - univariate time series = one variable over time
 - multivariate time series = multiple variables over time, but together are more helpful
 
+- real-word signals you'll encounter will likely have a combination of:
+
+  1. trend (global pattern forward/backwards in time),
+  2. seasonality (local pattern),
+  3. auto-correlation (correlation with a delayed copy of itself),
+  4. noise ("truly" unpredictable), and
+  5. non-stationary behaviour (behaviour may change, so you might want to give your model only a "window" of the data)
+
 - MAE = Mean Absolute Error = ??? to evaluate accuracy of sequence models - how???
 
 - trailing window = ??? - when use???
