trend is a global pattern, btw which can extend forwards/backwards in time

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -13,7 +13,7 @@
 
 - real-word signals you'll encounter will likely have a combination of:
 
-  1. trend (global pattern forward/backwards in time),
+  1. trend (global pattern, btw which can extend forward/backwards in time),
   2. seasonality (local pattern),
   3. auto-correlation (correlation with a delayed copy of itself),
   4. noise ("truly" unpredictable), and
