fixed partitioning vs roll-forward partitioning

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -19,6 +19,15 @@
   4. noise ("truly" unpredictable), and
   5. non-stationary behaviour (behaviour may change, so you might want to give your model only a "window" of the data)
 
+- fixed partitioning:
+
+  - consider splitting time series data into training/validation/test periods with whole numbers of seasonality "seasons" in each period.
+  - Use training data vs validation data, then combine (training + validation) data vs test data. Why? test data = typically closest to current data, or is just future data
+
+- roll-forward partitioning:
+
+  - repeated fixed-partitioning with increasing size of training period to forecast next day in the validation period (i.e. in the validation data)
+
 - MAE = Mean Absolute Error = ??? to evaluate accuracy of sequence models - how???
 
 - trailing window = ??? - when use???
