--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -8,27 +8,27 @@
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-4/82
 
-- univariate time series = one variable over time
-- multivariate time series = multiple variables over time, but together are more helpful
+- **univariate** time series = one variable over time
+- **multivariate** time series = multiple variables over time, but together are more helpful
 
-- real-word signals you'll encounter will likely have a combination of:
+- **real-word signals** you'll encounter will likely have a combination of:
 
-  1. trend (global pattern, btw which can extend forward/backwards in time),
-  2. seasonality (local pattern),
-  3. auto-correlation (correlation with a delayed copy of itself),
-  4. noise ("truly" unpredictable), and
-  5. non-stationary behaviour (behaviour may change, so you might want to give your model only a "window" of the data)
+  1. **trend** (global pattern, btw which can extend forward/backwards in time),
+  2. **seasonality** (local pattern),
+  3. **auto-correlation** (correlation with a delayed copy of itself),
+  4. **noise** ("truly" unpredictable), and
+  5. **non-stationary behaviour** (behaviour may change, so you might want to give your model only a "window" of the data)
 
-- fixed partitioning:
+- **fixed partitioning**:
 
   - consider splitting time series data into training/validation/test periods with whole numbers of seasonality "seasons" in each period.
   - Use training data vs validation data, then combine (training + validation) data vs test data. Why? test data = typically closest to current data, or is just future data
 
-- roll-forward partitioning:
+- **roll-forward partitioning**:
 
   - repeated fixed-partitioning with increasing size of training period to forecast next day in the validation period (i.e. in the validation data)
 
 - MAE = Mean Absolute Error = ??? to evaluate accuracy of sequence models - how???
 
-- trailing window = ??? - when use???
-- centered window = ??? - when use???
+- **trailing window** = ??? - when use???
+- **centered window** = ??? - when use???
