error, mse, rmse, mae, mape

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -28,7 +28,14 @@
 
   - repeated fixed-partitioning with increasing size of training period to forecast next day in the validation period (i.e. in the validation data)
 
-- MAE = Mean Absolute Error = ??? to evaluate accuracy of sequence models - how???
+- metrics for evaluating sequence/time-series model perf:
+
+  - `errors = forecasts - actual`
+  - `mse = np.square(errors).mean()` = Mean Squared Error, squared to get rid of negative values and avoid positive/negative errors cancelling each other out.
+  - `rmse = np.sqrt(mse)` = Root Mean Squared Error, for same scale of original errors.
+  - `mae = np.abs(errors).mean()` = Mean Absolute Error (aka MAD for Mean Absolute Deviation), if you want to avoid penalizing large errors as much as MSE does.
+    - `keras.metrics.mean_absolute_error(x_valid, naive_forecast).numpy()`
+  - `mape = np.abs(errors / x_valid).mean()` = Mean Absolute Percentage Error, to give an idea of the size of the errors compared to the size of the values.
 
 - **trailing window** = ??? - when use???
 - **centered window** = ??? - when use???
