--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -37,5 +37,11 @@
     - `keras.metrics.mean_absolute_error(x_valid, naive_forecast).numpy()`
   - `mape = np.abs(errors / x_valid).mean()` = Mean Absolute Percentage Error, to give an idea of the size of the errors compared to the size of the values.
 
+- **before you try deep learning, simpler approaches might work**:
+
+  - **moving average** eliminates noise and tries to guess at local trend but can't capture seasonality
+  - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)`
+  - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `series(t - 1yearAgo)` to get back an estimate of the original time series `series(t)` with restored seasonality and trend. Then use moving average again on that to smooth out noise and to try to reduce error.
+
 - **trailing window** = ??? - when use???
 - **centered window** = ??? - when use???
