trailing window and centered window in moving averages

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -39,9 +39,8 @@
 
 - **before you try deep learning, simpler approaches might work**:
 
-  - **moving average** eliminates noise and tries to guess at local trend but can't capture seasonality
-  - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)`
+  - **moving average** eliminates noise and tries to guess at local trend but can't capture seasonality:
+    - **trailing window** for moving average of **present** values, e.g. of differenced series (see below).
+    - **centered window** for moving average of **past** values, and can be more accurate, but can only be used for past values (can't get future values).
+  - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)`.
   - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `series(t - 1yearAgo)` to get back an estimate of the original time series `series(t)` with restored seasonality and trend. Then use moving average again on that to smooth out noise and to try to reduce error.
-
-- **trailing window** = ??? - when use???
-- **centered window** = ??? - when use???
