--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -4,7 +4,7 @@
 
 - slides: https://community.deeplearning.ai/t/tf1-course-4-lecture-notes/121711
 
-- companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C4
+- companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C4 - Jupyter notebooks not rendering for you on GitHub? Try https://nbviewer.org
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-4/82
 
