--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -42,5 +42,6 @@
   - **moving average** eliminates noise and tries to guess at local trend but can't capture seasonality:
     - **trailing window** for moving average of **present** values, e.g. of differenced series (see below).
     - **centered window** for moving average of **past** values, and can be more accurate, but can only be used for past values (can't get future values).
-  - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)`.
-  - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `series(t - 1yearAgo)` to get back an estimate of the original time series `series(t)` with restored seasonality and trend. Then use moving average again on that to smooth out noise and to try to reduce error.
+  - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)` or in Python-specific synax: `(series[365:] - series[:-365])`.
+  - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `moving_average_of( series(t - 1yearAgo) )` to get back an estimate of the original time series `series(t)` with restored seasonality and trend, or rather add back the moving average of `series(t - 1yearAgo)` for less noise and to effectively use 2 moving averages: `moving_average(series[split_time - 365 - window:-365 + window], window) + moving_average( (series[365:] - series[:-365]) , window )`.
+    - example: https://colab.research.google.com/drive/1ZQQ-RgCczaMs7OPt_HoXIFlltcPLL3Hz#scrollTo=eTD4ATkFYNZp
