--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -11,6 +11,8 @@
 - **univariate** time series = one variable over time
 - **multivariate** time series = multiple variables over time, but together are more helpful
 
+- **imputed** data = filled-in data that was missing (e.g. forecasting "backwards" into the past, or to fill in gaps in the data kinda like interpolation)
+
 - **real-word signals** you'll encounter will likely have a combination of:
 
   1. **trend** (global pattern, btw which can extend forward/backwards in time),
