start of DNN notes for sequences

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -47,3 +47,20 @@
   - **differencing** eliminates seasonality and trend, and instead compares a time with a previous time, e.g. `series(t) - series(t - 1yearAgo)` or in Python-specific synax: `(series[365:] - series[:-365])`.
   - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `moving_average_of( series(t - 1yearAgo) )` to get back an estimate of the original time series `series(t)` with restored seasonality and trend, or rather add back the moving average of `series(t - 1yearAgo)` for less noise and to effectively use 2 moving averages: `moving_average(series[split_time - 365 - window//2:-365 + window//2], window) + moving_average( (series[365:] - series[:-365]) , window )`.
     - example: https://colab.research.google.com/drive/1ZQQ-RgCczaMs7OPt_HoXIFlltcPLL3Hz#scrollTo=eTD4ATkFYNZp
+
+## DNN (Deep Neural Network)
+
+Similar to NLP examples in [C3.md](https://github.com/hchiam/learning-tensorflow/blob/master/my_coursera_notes/C3.md):
+
+- input "features" = x previous values
+- label = next value
+
+```py
+dataset = tf.data.Dataset.range(10) # real data forthcoming
+
+dataset = dataset.window(size=5, shift=1, drop_remainder=True) # drop_remainder option is confusingly named: makes return only datasets of window size
+dataset = dataset.flat_map(lambda window: window.batch(5))
+dataset = dataset.map(lambda window: window[:-1], window[-1]) # features rest, labels last
+dataset = dataset.shuffle(buffer_size=10)
+dataset = dataset.batch(batch_size=2).prefetch(1)
+```
