DNN code for time series

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -56,11 +56,42 @@ Similar to NLP examples in [C3.md](https://github.com/hchiam/learning-tensorflow
 - label = next value
 
 ```py
-dataset = tf.data.Dataset.range(10) # real data forthcoming
+window_size = 20
+batch_size = 32
+shuffle_buffer_size = 1000
+# split_time = ...
 
-dataset = dataset.window(size=5, shift=1, drop_remainder=True) # drop_remainder option is confusingly named: makes return only datasets of window size
-dataset = dataset.flat_map(lambda window: window.batch(5))
-dataset = dataset.map(lambda window: window[:-1], window[-1]) # features rest, labels last
-dataset = dataset.shuffle(buffer_size=10)
-dataset = dataset.batch(batch_size=2).prefetch(1)
+def windowed_dataset(series, window_size, batch_size, shuffle_buffer_size):
+  dataset = tf.data.Dataset.from_tensor_slices(series)
+  return dataset.window(size=window_size + 1, shift=1, drop_remainder=True) # drop_remainder option is confusingly named: makes return only datasets of window size
+    .flat_map(lambda window: window.batch(window_size + 1))
+    .shuffle(buffer_size=shuffle_buffer_size) # buffer_size for faster perf
+    .map(lambda window: window[:-1], window[-1]) # features and labels (last as labels)
+    .batch(batch_size=batch_size).prefetch(1)
+
+# data:
+dataset = windowed_dataset(series, window_size, batch_size, shuffle_buffer_size)
+
+# modeL:
+# layer1 = tf.keras.layers.Dense(1, input_shape=[window_size]) # so we can layer1.get_weights()
+model = tf.keras.models.Sequential([
+  # layer1,
+  tf.keras.layers.Dense(10, input_shape=[window_size], activation='relu'),
+  tf.keras.layers.Dense(10, activation='relu'),
+  tf.keras.layers.Dense(11)
+])
+model.compile(
+  loss='mse',
+  optimzer=tf.keras.optimizers.SGD(learning_rate=1e-6, momentum=0.9)
+)
+model.fit(dataset, epochs=100)
+
+# predict:
+# model.predict(series[1:21][np.newaxis]) # np.newaxis auto-reshapes to model's input dimension
+# or:
+forecast = []
+for time in range(len(series) - window_size):
+  forecast.append(model.predict( series[time:time+window_size][np.newaxis] ))
+forecast = forecast[split_time - window_size : ] # get predictions after the split for validation
+results = np.array(forecast)[:, 0, 0]
 ```
