initial_learning_rate, optimizer, learning_rate_scheduler_callback, model.fit, history, plot and plot

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -60,6 +60,15 @@ window_size = 20
 batch_size = 32
 shuffle_buffer_size = 1000
 # split_time = ...
+num_epochs = 500
+
+initial_learning_rate = 1e-8 # might automatically find something better like 7e-6
+optimizer = tf.keras.optimizers.SGD(learning_rate=initial_learning_rate, momentum=0.9)
+
+# will use this and model.fit history to plot/find best (and stable) learning rate:
+learning_rate_scheduler_callback = tf.keras.callbacks.LearningRateScheduler(
+  lambda epoch: 1e-8 * 10**(epoch/20) # make learning rate increase with epoch number
+)
 
 def windowed_dataset(series, window_size, batch_size, shuffle_buffer_size):
   dataset = tf.data.Dataset.from_tensor_slices(series)
@@ -72,7 +81,7 @@ def windowed_dataset(series, window_size, batch_size, shuffle_buffer_size):
 # data:
 dataset = windowed_dataset(series, window_size, batch_size, shuffle_buffer_size)
 
-# modeL:
+# model:
 # layer1 = tf.keras.layers.Dense(1, input_shape=[window_size]) # so we can layer1.get_weights()
 model = tf.keras.models.Sequential([
   # layer1,
@@ -82,9 +91,13 @@ model = tf.keras.models.Sequential([
 ])
 model.compile(
   loss='mse',
-  optimzer=tf.keras.optimizers.SGD(learning_rate=1e-6, momentum=0.9)
+  optimzer=optimizer
 )
-model.fit(dataset, epochs=100)
+history = model.fit(
+  dataset,
+  epochs=num_epochs,
+  callbacks=[learning_rate_scheduler_callback]
+)
 
 # predict:
 # model.predict(series[1:21][np.newaxis]) # np.newaxis auto-reshapes to model's input dimension
@@ -94,4 +107,19 @@ for time in range(len(series) - window_size):
   forecast.append(model.predict( series[time:time+window_size][np.newaxis] ))
 forecast = forecast[split_time - window_size : ] # get predictions after the split for validation
 results = np.array(forecast)[:, 0, 0]
+
+# plot learning rate versus loss (to get an idea of the best learning rate to use):
+learning_rate_series = 1e-8 * (10**(np.range(100) / 20))
+# import matplotlib.pyplot as plt
+plt.semilogx(learning_rate_series, history.history['loss'])
+plt.axis([1e-8, 1e-3, 0, 300])
+
+# plot loss over time for one given learning rate:
+ignore_first_few = 10
+loss_history = history.history['loss']
+epochs = range(ignore_first_few, len(loss_history)
+plt.plot(epochs, loss_history[ignore_first_few:], 'b', label='training loss')
+plt.show()
+
+print(tf.keras.metrics.mean_absolute_error(x_validation, results).numpy())
 ```
