fix syntax error

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -62,7 +62,7 @@ shuffle_buffer_size = 1000
 # split_time = ...
 num_epochs = 500
 
-initial_learning_rate = 1e-8 # might automatically find something better like 7e-6
+initial_learning_rate = 1e-8 # might automatically find something better like 1e-6
 optimizer = tf.keras.optimizers.SGD(learning_rate=initial_learning_rate, momentum=0.9)
 
 # will use this and model.fit history to plot/find best (and stable) learning rate:
@@ -75,7 +75,7 @@ def windowed_dataset(series, window_size, batch_size, shuffle_buffer_size):
   return dataset.window(size=window_size + 1, shift=1, drop_remainder=True) # drop_remainder option is confusingly named: makes return only datasets of window size
     .flat_map(lambda window: window.batch(window_size + 1))
     .shuffle(buffer_size=shuffle_buffer_size) # buffer_size for faster perf
-    .map(lambda window: window[:-1], window[-1]) # features and labels (last as labels)
+    .map(lambda window: (window[:-1], window[-1])) # (features, labels) (last as labels)
     .batch(batch_size=batch_size).prefetch(1)
 
 # data:
