time series RNN input dimensions: 3D

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -55,6 +55,10 @@ Similar to NLP examples in [C3.md](https://github.com/hchiam/learning-tensorflow
 - input "features" = x previous values
 - label = next value
 
+When you use RNN recurrent layers, the input window shape needs to be 3D:
+
+- `shape=[ batch size, # of time steps, # of dimensions ]`
+
 ```py
 window_size = 20
 batch_size = 32
