Further self-directed learning: use a transformer instead of RNN?

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -127,3 +127,7 @@ plt.show()
 
 print(tf.keras.metrics.mean_absolute_error(x_validation, results).numpy())
 ```
+
+## Further self-directed learning: use a transformer instead of RNN?
+
+Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
