lambda layers, huber loss, RNN, LSTM

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -48,6 +48,10 @@
   - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `moving_average_of( series(t - 1yearAgo) )` to get back an estimate of the original time series `series(t)` with restored seasonality and trend, or rather add back the moving average of `series(t - 1yearAgo)` for less noise and to effectively use 2 moving averages: `moving_average(series[split_time - 365 - window//2:-365 + window//2], window) + moving_average( (series[365:] - series[:-365]) , window )`.
     - example: https://colab.research.google.com/drive/1ZQQ-RgCczaMs7OPt_HoXIFlltcPLL3Hz#scrollTo=eTD4ATkFYNZp
 
+## lambda layers
+
+Lambda layers let you run arbitrary code/functions within the model definition itself.
+
 ## DNN (Deep Neural Network)
 
 Similar to NLP examples in [C3.md](https://github.com/hchiam/learning-tensorflow/blob/master/my_coursera_notes/C3.md):
@@ -57,16 +61,19 @@ Similar to NLP examples in [C3.md](https://github.com/hchiam/learning-tensorflow
 
 When you use RNN recurrent layers, the input window shape needs to be 3D:
 
-- `shape=[ batch size, # of time steps, # of dimensions ]`
+- `shape=[ batch size, # of time steps for RNN, # of (multivariate) dimensions ]`
+
+- **sequence-to-sequence RNN** outputs per time step = sequences (`return_sequences=True, input_shape=[None, 1]`, especially if passing along to another RNN layer) = batch of sequences, given a batch of sequences
+- **sequence-to-vector RNN** is just ignoring all time step outputs except the last one (default `tf.keras` behaviour) = batch of single outputs, given a batch of sequences
 
 ```py
 window_size = 20
-batch_size = 32
+batch_size = 128
 shuffle_buffer_size = 1000
 # split_time = ...
-num_epochs = 500
+num_epochs = 100 # at first to get an idea of a good learning rate, then change to 500
 
-initial_learning_rate = 1e-8 # might automatically find something better like 1e-6
+initial_learning_rate = 1e-8 # might automatically find something better like 5e-6
 optimizer = tf.keras.optimizers.SGD(learning_rate=initial_learning_rate, momentum=0.9)
 
 # will use this and model.fit history to plot/find best (and stable) learning rate:
@@ -86,16 +93,29 @@ def windowed_dataset(series, window_size, batch_size, shuffle_buffer_size):
 dataset = windowed_dataset(series, window_size, batch_size, shuffle_buffer_size)
 
 # model:
+tf.keras.backend.clear_session() # so model doesn't affect later versions of itself
 # layer1 = tf.keras.layers.Dense(1, input_shape=[window_size]) # so we can layer1.get_weights()
 model = tf.keras.models.Sequential([
   # layer1,
-  tf.keras.layers.Dense(10, input_shape=[window_size], activation='relu'),
-  tf.keras.layers.Dense(10, activation='relu'),
-  tf.keras.layers.Dense(1)
+
+  # tf.keras.layers.Dense(10, input_shape=[window_size], activation='relu'),
+  # tf.keras.layers.Dense(10, activation='relu'),
+  # tf.keras.layers.Dense(1)
+
+  tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=[None]), #2D + 1D at index -1 = 3D
+  # tf.keras.layers.SimpleRNN(40, return_sequences=True), #, input_shape=[None, 1]),
+  # tf.keras.layers.SimpleRNN(40),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32), return_sequences=True),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32), return_sequences=True),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
+  tf.keras.layers.Dense(1),
+  tf.keras.layers.Lambda(lambda x: x * 100.0) # scale to same range as tanh [-1,+1]
 ])
 model.compile(
   loss='mse',
-  optimzer=optimizer
+  loss=tf.keras.losses.Huber(), # Huber loss function is less sensitive to outliers than, say, MSE is to outliers - https://en.wikipedia.org/wiki/Huber_loss
+  optimizer=optimizer,
+  metrics=['mae']
 )
 history = model.fit(
   dataset,
