--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -105,14 +105,14 @@ model = tf.keras.models.Sequential([
   tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=[None]), #2D + 1D at index -1 = 3D
   # tf.keras.layers.SimpleRNN(40, return_sequences=True), #, input_shape=[None, 1]),
   # tf.keras.layers.SimpleRNN(40),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32), return_sequences=True),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32), return_sequences=True),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
   tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
   tf.keras.layers.Dense(1),
   tf.keras.layers.Lambda(lambda x: x * 100.0) # scale to same range as tanh [-1,+1]
 ])
 model.compile(
-  loss='mse',
+  # loss='mse',
   loss=tf.keras.losses.Huber(), # Huber loss function is less sensitive to outliers than, say, MSE is to outliers - https://en.wikipedia.org/wiki/Huber_loss
   optimizer=optimizer,
   metrics=['mae']
