further coursera learning specializations

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -151,3 +151,18 @@ print(tf.keras.metrics.mean_absolute_error(x_validation, results).numpy())
 ## Further self-directed learning: use a transformer instead of RNN?
 
 Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
+
+## Further learning
+
+Deploy: https://www.coursera.org/specializations/tensorflow-data-and-deployment
+
+- JS
+- lite
+- data pipelines/services
+
+Advanced: https://www.coursera.org/specializations/tensorflow-advanced-techniques
+
+- custom
+- distributed
+- image segmentation, object localization
+- generative, transfer
