links for js and lite courses

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -156,8 +156,8 @@ Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
 
 Deploy: https://www.coursera.org/specializations/tensorflow-data-and-deployment
 
-- JS
-- lite
+- [JS](https://www.coursera.org/learn/browser-based-models-tensorflow?specialization=tensorflow-data-and-deployment)
+- [lite](https://www.coursera.org/learn/device-based-models-tensorflow?specialization=tensorflow-data-and-deployment)
 - data pipelines/services
 
 Advanced: https://www.coursera.org/specializations/tensorflow-advanced-techniques
