--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -68,12 +68,12 @@ When you use RNN recurrent layers, the input window shape needs to be 3D:
 
 ```py
 window_size = 20
-batch_size = 128
+batch_size = 128 # try increasing (or decreasing) to see if that reduces overfitting or reduces noise/instability
 shuffle_buffer_size = 1000
 # split_time = ...
 num_epochs = 100 # at first to get an idea of a good learning rate, then change to 500
 
-initial_learning_rate = 1e-8 # might automatically find something better like 5e-6
+initial_learning_rate = 1e-8 # might automatically find something better like 1e-5
 optimizer = tf.keras.optimizers.SGD(learning_rate=initial_learning_rate, momentum=0.9)
 
 # will use this and model.fit history to plot/find best (and stable) learning rate:
@@ -102,14 +102,23 @@ model = tf.keras.models.Sequential([
   # tf.keras.layers.Dense(10, activation='relu'),
   # tf.keras.layers.Dense(1)
 
-  tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=[None]), #2D + 1D at index -1 = 3D
   # tf.keras.layers.SimpleRNN(40, return_sequences=True), #, input_shape=[None, 1]),
   # tf.keras.layers.SimpleRNN(40),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
+
+  # tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=[None]), #2D + 1D at index -1 = 3D
+  tf.keras.layers.Conv1D( # CNN layer
+      filters=32,
+      kernel_size=5, # 5-number window convolution
+      strides=1,
+      padding='causal',
+      activation='relu',
+      input_shape=[None, 1] # reshape to work with the later LSTM layer
+  ),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)), # LSTM layer
+  # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
   tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
   tf.keras.layers.Dense(1),
-  tf.keras.layers.Lambda(lambda x: x * 100.0) # scale to same range as tanh [-1,+1]
+  tf.keras.layers.Lambda(lambda x: x * 200) # scale to same range as tanh [-1,+1]
 ])
 model.compile(
   # loss='mse',
