np.array append perf note

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -33,8 +33,8 @@
   for sentence, label in test_data:
     test_labels.append(label.numpy())
     test_sentences.append(sentence.numpy().decode('utf8'))
-  train_labels_final = np.array(train_labels)
-  test_labels_final = np.array(test_labels)
+  train_labels_final = np.array(train_labels) # convert np.array at end for better perf
+  test_labels_final = np.array(test_labels) # otherwise appending to np.array is slow
   ```
 
   - more: https://github.com/tensorflow/datasets/tree/master/docs/catalog and https://www.tensorflow.org/datasets/catalog/overview
