--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -66,11 +66,19 @@ When you use RNN recurrent layers, the input window shape needs to be 3D:
 - **sequence-to-sequence RNN** outputs per time step = sequences (`return_sequences=True, input_shape=[None, 1]`, especially if passing along to another RNN layer) = batch of sequences, given a batch of sequences
 - **sequence-to-vector RNN** is just ignoring all time step outputs except the last one (default `tf.keras` behaviour) = batch of single outputs, given a batch of sequences
 
+If you notice lots of "irregular wobbling" (technically called noise or instability) in the training loss curve over epochs or the training MAE curve over epochs:
+
+- try increasing (or decreasing) batch size
+- if the noise/instability seems to have regular intervals, then the batch size might be only slightly off what it should be (lower batch size slightly?)
+- try making window size and batch size evenly divide up the training data size
+
 ```py
-window_size = 20
-batch_size = 128 # try increasing (or decreasing) to see if that reduces overfitting or reduces noise/instability
+# TIP: try tuning these values but also model values and design:
+
+window_size = 60
+batch_size = 100 # TIP: try increasing (or decreasing) batch size to see if that reduces overfitting or reduces noise/instability in the decreasing loss or MAE curves
 shuffle_buffer_size = 1000
-# split_time = ...
+split_time = 3000 # and 500 for validation
 num_epochs = 100 # at first to get an idea of a good learning rate, then change to 500
 
 initial_learning_rate = 1e-8 # might automatically find something better like 1e-5
@@ -98,8 +106,6 @@ tf.keras.backend.clear_session() # so model doesn't affect later versions of its
 model = tf.keras.models.Sequential([
   # layer1,
 
-  # tf.keras.layers.Dense(10, input_shape=[window_size], activation='relu'),
-  # tf.keras.layers.Dense(10, activation='relu'),
   # tf.keras.layers.Dense(1)
 
   # tf.keras.layers.SimpleRNN(40, return_sequences=True), #, input_shape=[None, 1]),
@@ -107,18 +113,20 @@ model = tf.keras.models.Sequential([
 
   # tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=[None]), #2D + 1D at index -1 = 3D
   tf.keras.layers.Conv1D( # CNN layer
-      filters=32,
+      filters=60,
       kernel_size=5, # 5-number window convolution
       strides=1,
       padding='causal',
       activation='relu',
-      input_shape=[None, 1] # reshape to work with the later LSTM layer
+      input_shape=[None, 1] # reshape to work with the later univariate LSTM layer
   ),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)), # LSTM layer
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(60, return_sequences=True)), # LSTM layer
   # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32, return_sequences=True)),
-  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(60)),
+  tf.keras.layers.Dense(30, input_shape=[window_size], activation='relu'),
+  tf.keras.layers.Dense(10, activation='relu'),
   tf.keras.layers.Dense(1),
-  tf.keras.layers.Lambda(lambda x: x * 200) # scale to same range as tanh [-1,+1]
+  tf.keras.layers.Lambda(lambda x: x * 400) # scale up tanh [-1,+1] to same range as data [1,400]
 ])
 model.compile(
   # loss='mse',
