csv next to ignore header. np.array at the end for better perf.

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -48,6 +48,24 @@
   - **moving average of differenced time series** = combine the 2 previous concepts: use differencing, then use a moving average on that, then add back `moving_average_of( series(t - 1yearAgo) )` to get back an estimate of the original time series `series(t)` with restored seasonality and trend, or rather add back the moving average of `series(t - 1yearAgo)` for less noise and to effectively use 2 moving averages: `moving_average(series[split_time - 365 - window//2:-365 + window//2], window) + moving_average( (series[365:] - series[:-365]) , window )`.
     - example: https://colab.research.google.com/drive/1ZQQ-RgCczaMs7OPt_HoXIFlltcPLL3Hz#scrollTo=eTD4ATkFYNZp
 
+## reading csv with headers
+
+```py
+import csv
+time_step = []
+sunspots = []
+
+with open('/path/to/file.csv') as csvfile:
+  reader = csv.reader(csvfile, delimiter=',')
+  next(reader) # ignore header row
+  for row in reader:
+    time_step.append(int(row[0]))
+    sunspots.append(float(row[2]))
+# convert np.array at end for better perf, otherwise appending to np.array is slow
+time_step = np.array(time_step)
+sunspots = np.array(sunspots)
+```
+
 ## lambda layers
 
 Lambda layers let you run arbitrary code/functions within the model definition itself.
