show how to use index if the times are already sorted and equidistant

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -58,7 +58,8 @@ sunspots = []
 with open('/path/to/file.csv') as csvfile:
   reader = csv.reader(csvfile, delimiter=',')
   next(reader) # ignore header row
-  for row in reader:
+  for i, row in enumerate(reader):
+    # time_step.append(i)
     time_step.append(int(row[0]))
     sunspots.append(float(row[2]))
 # convert np.array at end for better perf, otherwise appending to np.array is slow
